@@ -1,9 +1,9 @@
 package org.hip.kernel.bom.impl.test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -26,26 +26,24 @@ import org.hip.kernel.bom.model.ObjectDef;
 import org.hip.kernel.bom.model.PropertyDef;
 import org.hip.kernel.exc.VException;
 import org.hip.kernel.sys.VSys;
-import org.junit.After;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 /** @author: Benno Luthiger */
 public class JoinedDomainObjectHomeImplTest {
     private static TestJoinedDomainObjectHomeImpl home;
-    private static DataHouseKeeper data;
 
-    @BeforeClass
-    public static void init() {
-        data = DataHouseKeeper.getInstance();
+    @BeforeAll
+    static void init() {
         home = (TestJoinedDomainObjectHomeImpl) VSys.homeManager
                 .getHome("org.hip.kernel.bom.impl.test.TestJoinedDomainObjectHomeImpl");
     }
 
-    @After
-    public void tearDown() throws Exception {
-        data.deleteAllFromSimple();
-        data.deleteAllFromLink();
+    @AfterEach
+    void tearDown() throws Exception {
+        DataHouseKeeper.INSTANCE.deleteAllFromSimple();
+        DataHouseKeeper.INSTANCE.deleteAllFromLink();
         System.out.println("Deleted all entries in tblTest and tblGroupAdmin.");
     }
 
@@ -76,33 +74,33 @@ public class JoinedDomainObjectHomeImplTest {
     }
 
     @Test
-    public void testGetObjectDef() throws VException {
+    void testGetObjectDef() throws VException {
         final ObjectDef lObjectDef = home.getObjectDef();
-        assertNotNull("testGetObjectDef", lObjectDef);
+        assertNotNull(lObjectDef);
 
         final String[] lExpected = { "version", "keyDefs", "propertyDefs", "parent", "objectName", "baseDir" };
         final Vector<String> lVExpected = new Vector<String>(Arrays.asList(lExpected));
 
         int i = 0;
         for (final String lName : lObjectDef.getPropertyNames2()) {
-            assertTrue("testGetObjectDef 1." + i++, lVExpected.contains(lName));
+            assertTrue(lVExpected.contains(lName));
         }
 
-        assertEquals("porperty version", "1.0", lObjectDef.get("version"));
-        assertEquals("porperty keyDefs", null, lObjectDef.get("keyDefs"));
-        assertEquals("porperty parent", "org.hip.kernel.bom.ReadOnlyDomainObject", lObjectDef.get("parent"));
-        assertEquals("porperty objectName", "TestJoin1", lObjectDef.get("objectName"));
+        assertEquals("1.0", lObjectDef.get("version"));
+        assertEquals(null, lObjectDef.get("keyDefs"));
+        assertEquals("org.hip.kernel.bom.ReadOnlyDomainObject", lObjectDef.get("parent"));
+        assertEquals("TestJoin1", lObjectDef.get("objectName"));
 
         final String[] lExpected2 = { "Name", "MemberID", "Mutation", "FirstName" };
         final Vector<String> lVExpected2 = new Vector<String>(Arrays.asList(lExpected2));
         i = 0;
         for (final PropertyDef lPropertyDef : lObjectDef.getPropertyDefs2()) {
-            assertTrue("testGetObjectDef 2." + i++, lVExpected2.contains(lPropertyDef.getName()));
+            assertTrue(lVExpected2.contains(lPropertyDef.getName()));
         }
     }
 
     @Test
-    public void testObjects() {
+    void testObjects() {
         final String[] lObtained = new String[4];
 
         final String[] lExpectedCols = { "tblTestMember.TESTMEMBERID", "tblTestMember.SNAME",
@@ -121,9 +119,9 @@ public class JoinedDomainObjectHomeImplTest {
         i = 0;
         while (lStringTokenizer.hasMoreTokens()) {
             i++;
-            assertTrue("ColumnList " + i, lVExpectedCols.contains(lStringTokenizer.nextToken().trim()));
+            assertTrue(lVExpectedCols.contains(lStringTokenizer.nextToken().trim()));
         }
-        assertEquals("ColumnList size", lVExpectedCols.size(), i);
+        assertEquals(lVExpectedCols.size(), i);
 
         lColumnList = lObtained[2];
         lColumnList = lColumnList.substring(7, lColumnList.indexOf("FROM") - 1);
@@ -131,16 +129,16 @@ public class JoinedDomainObjectHomeImplTest {
         i = 0;
         while (lStringTokenizer.hasMoreTokens()) {
             i++;
-            assertTrue("ColumnList " + i, lVExpectedCols.contains(lStringTokenizer.nextToken().trim()));
+            assertTrue(lVExpectedCols.contains(lStringTokenizer.nextToken().trim()));
         }
-        assertEquals("ColumnList size", lVExpectedCols.size(), i);
+        assertEquals(lVExpectedCols.size(), i);
 
         // get the actual list of WHEREs
         String lWhereList = lObtained[1];
         lWhereList = lWhereList.substring(lWhereList.indexOf("WHERE") + 6);
 
         final String[] lExpected = new String[4];
-        if (data.isDBMySQL()) {
+        if (DataHouseKeeper.INSTANCE.isDBMySQL()) {
             lExpected[0] = "SELECT COUNT(tblTestMember.TESTMEMBERID) FROM tblTestMember INNER JOIN tblGroupAdmin ON tblTestMember.TESTMEMBERID = tblGroupAdmin.MEMBERID";
             lExpected[1] = "SELECT COUNT(tblTestMember.TESTMEMBERID) FROM tblTestMember INNER JOIN tblGroupAdmin ON tblTestMember.TESTMEMBERID = tblGroupAdmin.MEMBERID WHERE "
                     + lWhereList;
@@ -152,7 +150,7 @@ public class JoinedDomainObjectHomeImplTest {
                     + " FROM tblTestMember INNER JOIN tblGroupAdmin ON tblTestMember.TESTMEMBERID = tblGroupAdmin.MEMBERID WHERE "
                     + lWhereList;
         }
-        else if (data.isDBOracle()) {
+        else if (DataHouseKeeper.INSTANCE.isDBOracle()) {
             lExpected[0] = "SELECT COUNT(tblTestMember.TESTMEMBERID) FROM tblTestMember, tblGroupAdmin WHERE tblTestMember.TESTMEMBERID = tblGroupAdmin.MEMBERID";
             lExpected[1] = "SELECT COUNT(tblTestMember.TESTMEMBERID) FROM tblTestMember, tblGroupAdmin WHERE "
                     + lWhereList;
@@ -163,75 +161,75 @@ public class JoinedDomainObjectHomeImplTest {
         }
 
         for (i = lObtained.length - 1; i >= 0; i--) {
-            assertEquals("testObjects " + i, lExpected[i], lObtained[i]);
+            assertEquals(lExpected[i], lObtained[i]);
         }
     }
 
     @Test
-    public void testSelect() throws SQLException, VException {
+    void testSelect() throws SQLException, VException {
         // select all testIDs which are member of the specified group
         final String[][] lNames = { { "first", "1" }, { "second", "2" }, { "third", "3" }, { "forth", "4" } };
         final Long[] lKeys = new Long[4];
 
         // create 4 test entries
         for (int i = 0; i < lNames.length; i++) {
-            lKeys[i] = data.createTestEntry(lNames[i][0], lNames[i][1]);
+            lKeys[i] = DataHouseKeeper.INSTANCE.createTestEntry(lNames[i][0], lNames[i][1]);
         }
 
-        data.createTestLinkEntry(lKeys[0].intValue(), 1);
-        data.createTestLinkEntry(lKeys[1].intValue(), 1);
-        data.createTestLinkEntry(lKeys[2].intValue(), 1);
-        data.createTestLinkEntry(lKeys[3].intValue(), 1);
-        data.createTestLinkEntry(lKeys[0].intValue(), 2);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[0].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[1].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[2].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[3].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[0].intValue(), 2);
 
         KeyObject lKey = new KeyObjectImpl();
-        lKey.setValue("GroupID", new Integer(1));
+        lKey.setValue("GroupID", Integer.valueOf(1));
 
         Test2JoinedDomainObjectHomeImpl lHome = (Test2JoinedDomainObjectHomeImpl) VSys.homeManager
                 .getHome("org.hip.kernel.bom.impl.test.Test2JoinedDomainObjectHomeImpl");
         QueryResult lQueryResult = lHome.select(lKey);
-        assertEquals("number of selected 1", 4, setBOF(lQueryResult));
+        assertEquals(4, setBOF(lQueryResult));
 
         lKey = new KeyObjectImpl();
-        lKey.setValue("GroupID", new Integer(2));
+        lKey.setValue("GroupID", Integer.valueOf(2));
 
         lHome = (Test2JoinedDomainObjectHomeImpl) VSys.homeManager
                 .getHome("org.hip.kernel.bom.impl.test.Test2JoinedDomainObjectHomeImpl");
         lQueryResult = lHome.select(lKey);
-        assertEquals("number of selected 2", 1, setBOF(lQueryResult));
+        assertEquals(1, setBOF(lQueryResult));
     }
 
     @Test
-    public void testSerialization() throws IOException, ClassNotFoundException, SQLException, VException {
+    void testSerialization() throws IOException, ClassNotFoundException, SQLException, VException {
         // first, we set up some relevant data in the tables
         final String[][] lNames = { { "first", "1" }, { "second", "2" }, { "third", "3" }, { "forth", "4" } };
         final Long[] lKeys = new Long[4];
 
         for (int i = 0; i < lNames.length; i++) {
-            lKeys[i] = data.createTestEntry(lNames[i][0], lNames[i][1]);
+            lKeys[i] = DataHouseKeeper.INSTANCE.createTestEntry(lNames[i][0], lNames[i][1]);
         }
 
-        data.createTestLinkEntry(lKeys[0].intValue(), 1);
-        data.createTestLinkEntry(lKeys[1].intValue(), 1);
-        data.createTestLinkEntry(lKeys[2].intValue(), 1);
-        data.createTestLinkEntry(lKeys[3].intValue(), 1);
-        data.createTestLinkEntry(lKeys[0].intValue(), 2);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[0].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[1].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[2].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[3].intValue(), 1);
+        DataHouseKeeper.INSTANCE.createTestLinkEntry(lKeys[0].intValue(), 2);
 
         Test2JoinedDomainObjectHomeImpl lHome = (Test2JoinedDomainObjectHomeImpl) VSys.homeManager
                 .getHome("org.hip.kernel.bom.impl.test.Test2JoinedDomainObjectHomeImpl");
 
         // second, we test the joins we expect
         final KeyObject lKey1 = new KeyObjectImpl();
-        lKey1.setValue("GroupID", new Integer(1));
+        lKey1.setValue("GroupID", Integer.valueOf(1));
 
         final KeyObject lKey2 = new KeyObjectImpl();
-        lKey2.setValue("GroupID", new Integer(2));
+        lKey2.setValue("GroupID", Integer.valueOf(2));
 
         QueryResult lResult = lHome.select(lKey1);
-        assertEquals("number of joined 1", 4, setBOF(lResult));
+        assertEquals(4, setBOF(lResult));
 
         lResult = lHome.select(lKey2);
-        assertEquals("number of joined 2", 1, setBOF(lResult));
+        assertEquals(1, setBOF(lResult));
 
         // here, we serialize
         final ByteArrayOutputStream lBytesOut = new ByteArrayOutputStream();
@@ -250,10 +248,10 @@ public class JoinedDomainObjectHomeImplTest {
 
         // at last, we test the behavior of the retrieved home
         lResult = lRetrieved.select(lKey1);
-        assertEquals("number of joined 3", 4, setBOF(lResult));
+        assertEquals(4, setBOF(lResult));
 
         lResult = lRetrieved.select(lKey2);
-        assertEquals("number of joined 4", 1, setBOF(lResult));
+        assertEquals(1, setBOF(lResult));
     }
 
     private int setBOF(final QueryResult inResult) throws BOMException, SQLException {
